Crash when hotplugging DP MST Dock
This bug is giving me some serious dejavu. Hotplugging my machine enough times will consistently crash gnome-shell. Here's a backtrace:
➜ ~ coredumpctl gdb gnome-shell
PID: 7949 (gnome-shell)
UID: 1000 (lyudess)
GID: 1000 (lyudess)
Signal: 8 (FPE)
Timestamp: Fri 2018-06-08 15:54:44 EDT (1min 46s ago)
Command Line: /usr/bin/gnome-shell
Executable: /usr/bin/gnome-shell
Control Group: /user.slice/user-1000.slice/session-4.scope
Unit: session-4.scope
Slice: user-1000.slice
Session: 4
Owner UID: 1000 (lyudess)
Boot ID: fee57d739f634b48a2564361d7123247
Machine ID: 4c0bde5726cb49139fdf963574eea509
Hostname: malachite
Storage: /var/lib/systemd/coredump/core.gnome-shell.1000.fee57d739f634b48a2564361d7123247.7949.1528487684000000.lz4
Message: Process 7949 (gnome-shell) of user 1000 dumped core.
Stack trace of thread 7949:
#0 0x00007fbb6f477e5b raise (libpthread.so.0)
#1 0x00005580c0961b83 dump_gjs_stack_on_signal_handler (gnome-shell)
#2 0x00007fbb6f477fc0 __restore_rt (libpthread.so.0)
#3 0x00007fbb6f789e43 meta_window_wayland_move_resize_internal (libmutter-2.so.0)
#4 0x00007fbb6f74777d meta_window_move_resize_internal (libmutter-2.so.0)
#5 0x00007fbb7126d885 g_slist_foreach (libglib-2.0.so.0)
#6 0x00007fbb6f739958 meta_screen_foreach_window (libmutter-2.so.0)
#7 0x00007fbb6f73c5d7 on_monitors_changed_internal (libmutter-2.so.0)
#8 0x00007fbb71529add g_closure_invoke (libgobject-2.0.so.0)
#9 0x00007fbb7153cf43 signal_emit_unlocked_R (libgobject-2.0.so.0)
#10 0x00007fbb7154606a g_signal_emit_valist (libgobject-2.0.so.0)
#11 0x00007fbb71546663 g_signal_emit (libgobject-2.0.so.0)
#12 0x00007fbb6f6fd619 meta_monitor_manager_notify_monitors_changed (libmutter-2.so.0)
#13 0x00007fbb6f6ff96f meta_monitor_manager_rebuild (libmutter-2.so.0)
#14 0x00007fbb6f798a42 meta_monitor_manager_kms_apply_monitors_config (libmutter-2.so.0)
#15 0x00007fbb6f6fd65c meta_monitor_manager_apply_monitors_config (libmutter-2.so.0)
#16 0x00007fbb6f6fe62f meta_monitor_manager_ensure_configured (libmutter-2.so.0)
#17 0x00007fbb6bf7603e ffi_call_unix64 (libffi.so.6)
#18 0x00007fbb6bf759ff ffi_call (libffi.so.6)
#19 0x00007fbb7152a5a5 g_cclosure_marshal_generic (libgobject-2.0.so.0)
#20 0x00007fbb71529add g_closure_invoke (libgobject-2.0.so.0)
#21 0x00007fbb7153cf43 signal_emit_unlocked_R (libgobject-2.0.so.0)
#22 0x00007fbb7154606a g_signal_emit_valist (libgobject-2.0.so.0)
#23 0x00007fbb71546663 g_signal_emit (libgobject-2.0.so.0)
#24 0x00007fbb62b45ba8 monitor_event (libgudev-1.0.so.0)
#25 0x00007fbb7124e8ad g_main_dispatch (libglib-2.0.so.0)
#26 0x00007fbb7124ec78 g_main_context_iterate (libglib-2.0.so.0)
#27 0x00007fbb7124efa2 g_main_loop_run (libglib-2.0.so.0)
#28 0x00007fbb6f734de0 meta_run (libmutter-2.so.0)
#29 0x00005580c09614d8 main (gnome-shell)
#30 0x00007fbb6f0ca18b __libc_start_main (libc.so.6)
#31 0x00005580c096162a _start (gnome-shell)
Stack trace of thread 7951:
#0 0x00007fbb6f196589 __GI___poll (libc.so.6)
#1 0x00007fbb7124ebe6 g_main_context_poll (libglib-2.0.so.0)
#2 0x00007fbb7124ed10 g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007fbb7124ed61 glib_worker_main (libglib-2.0.so.0)
#4 0x00007fbb71276f2a g_thread_proxy (libglib-2.0.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 7952:
#0 0x00007fbb6f196589 __GI___poll (libc.so.6)
#1 0x00007fbb7124ebe6 g_main_context_poll (libglib-2.0.so.0)
#2 0x00007fbb7124efa2 g_main_loop_run (libglib-2.0.so.0)
#3 0x00007fbb7183f6ba gdbus_shared_thread_func (libgio-2.0.so.0)
#4 0x00007fbb71276f2a g_thread_proxy (libglib-2.0.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 7953:
#0 0x00007fbb6f196589 __GI___poll (libc.so.6)
#1 0x00007fbb7124ebe6 g_main_context_poll (libglib-2.0.so.0)
#2 0x00007fbb7124ed10 g_main_context_iteration (libglib-2.0.so.0)
#3 0x00007fbb5b16be4d dconf_gdbus_worker_thread (libdconfsettings.so)
#4 0x00007fbb71276f2a g_thread_proxy (libglib-2.0.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8043:
#0 0x00007fbb6f196589 __GI___poll (libc.so.6)
#1 0x00007fbb4697bd75 poll (libpulse.so.0)
#2 0x00007fbb4696d368 pa_mainloop_poll (libpulse.so.0)
#3 0x00007fbb4696d9b2 pa_mainloop_iterate (libpulse.so.0)
#4 0x00007fbb4696da60 pa_mainloop_run (libpulse.so.0)
#5 0x00007fbb4697bcbd thread (libpulse.so.0)
#6 0x00007fbb4671a98c internal_thread_func (libpulsecommon-11.1.so)
#7 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#8 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8059:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8063:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8064:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8065:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8066:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 9330:
#0 0x00007fbb6f19ba19 syscall (libc.so.6)
#1 0x00007fbb712956ee g_cond_wait_until (libglib-2.0.so.0)
#2 0x00007fbb712210f1 g_async_queue_pop_intern_unlocked (libglib-2.0.so.0)
#3 0x00007fbb712216e0 g_async_queue_timeout_pop (libglib-2.0.so.0)
#4 0x00007fbb712779d1 g_thread_pool_wait_for_new_pool (libglib-2.0.so.0)
#5 0x00007fbb71276f2a g_thread_proxy (libglib-2.0.so.0)
#6 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#7 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8061:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8062:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
Stack trace of thread 8060:
#0 0x00007fbb6f47352c futex_wait_cancelable (libpthread.so.0)
#1 0x00007fbb673dbd08 _ZN2js17ConditionVariable4waitERNS_9LockGuardINS_5MutexEEE (libmozjs-52.so.0)
#2 0x00007fbb673dbfc5 _ZN2js17ConditionVariable8wait_forERNS_9LockGuardINS_5MutexEEERKN7mozilla16BaseTimeDurationINS5_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#3 0x00007fbb677c6ff0 _ZN2js23GlobalHelperThreadState4waitERNS_25AutoLockHelperThreadStateENS0_7CondVarEN7mozilla16BaseTimeDurationINS4_27TimeDurationValueCalculatorEEE (libmozjs-52.so.0)
#4 0x00007fbb677e7fd6 _ZN2js6detail16ThreadTrampolineIRFvPvEJPNS_12HelperThreadEEE8callMainIJLm0EEEEvN7mozilla13IndexSequenceIJXspT_EEEE (libmozjs-52.so.0)
#5 0x00007fbb6f46d594 start_thread (libpthread.so.0)
#6 0x00007fbb6f1a100f __clone (libc.so.6)
There's also a fedora FAF for this: https://retrace.fedoraproject.org/faf/reports/2191290/ And I've attached the abrt directory, which should have the relevant system logs and coredump. If you need any more information don't hesitate to let me know.